--- a/index.html
+++ b/index.html
@@ -8,11 +8,28 @@
     <link rel="stylesheet" type="text/css" href ="style.css">
 </head>
 <body>
-    <div style="background-color: red;">DIV1</div>
-    <header style="background-color: aqua;">HEADER</header>
-    <section style="background-color: greenyellow;">section</section>
-    <article style="background-color: purple;">article</article>
-    <footer style="background-color: blue;">footer</footer>
-    <nav style="background-color: brown;">nav</nav>
+    <div class="div1">
+        <h1>Cabeçalho</h1>
+        <h2>subtitulo</h2>
+    </div>
+    <header class="header1">
+        <button>Click aqui!</button>
+        <button>Click aqui!</button>
+    </header>
+    <section class="section1">
+        <ul>
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+        </ul>
+    </section>
+    <article class="article1">
+        <img src="./Pikachu.png">
+    </article>
+    <footer class="footer1">
+        <span class="textSize"><em>Texto <strong>aqui</strong> rsrsr</em></span>
+    </footer>
+    <nav class="nav1">
+        <a href="https://www.udesc.br" target="_blank">Clique aqui -> ir para UDESC</a></nav>
 </body>
 </html>
